--- a/plots/index.html
+++ b/plots/index.html
@@ -31,4 +31,22 @@
 <div style='margin:10px 0'><h3>confusion_matrix_normalized.png</h3><img src='confusion_matrix_normalized.png' style='max-width:100%;height:auto'></div>
 <div style='margin:10px 0'><h3>metrics_precision_recall_f1.png</h3><img src='metrics_precision_recall_f1.png' style='max-width:100%;height:auto'></div>
 <div style='margin:10px 0'><h3>support.png</h3><img src='support.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>accuracy.png</h3><img src='accuracy.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>classification_report_table.png</h3><img src='classification_report_table.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>confusion_matrix.png</h3><img src='confusion_matrix.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>confusion_matrix_normalized.png</h3><img src='confusion_matrix_normalized.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>metrics_precision_recall_f1.png</h3><img src='metrics_precision_recall_f1.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>support.png</h3><img src='support.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>accuracy.png</h3><img src='accuracy.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>classification_report_table.png</h3><img src='classification_report_table.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>confusion_matrix.png</h3><img src='confusion_matrix.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>confusion_matrix_normalized.png</h3><img src='confusion_matrix_normalized.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>metrics_precision_recall_f1.png</h3><img src='metrics_precision_recall_f1.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>support.png</h3><img src='support.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>accuracy.png</h3><img src='accuracy.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>classification_report_table.png</h3><img src='classification_report_table.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>confusion_matrix.png</h3><img src='confusion_matrix.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>confusion_matrix_normalized.png</h3><img src='confusion_matrix_normalized.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>metrics_precision_recall_f1.png</h3><img src='metrics_precision_recall_f1.png' style='max-width:100%;height:auto'></div>
+<div style='margin:10px 0'><h3>support.png</h3><img src='support.png' style='max-width:100%;height:auto'></div>
 </body></html>
